[gd_scene load_steps=2 format=3 uid="uid://d05l8dyxhelay"]

[ext_resource type="Script" uid="uid://db5abw6vakeva" path="res://scripts/menu.gd" id="1_yqeox"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_yqeox")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 171.0
offset_top = 57.0
offset_right = 549.0
offset_bottom = 199.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "                            ENDLESS RUNNER"

[node name="PlayButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Jogar"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Como jogar
"

[node name="ZerarHighScore" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Zerar High Score"

[node name="ConfirmReset" type="ConfirmationDialog" parent="."]
